--- a/praticalDL4Coders-JeremyHoward/praticalDL4Coders-JeremyHoward.ipynb
+++ b/praticalDL4Coders-JeremyHoward/praticalDL4Coders-JeremyHoward.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMRB0iaRYz+YqaGg0E/iYhi",
+      "authorship_tag": "ABX9TyOdtwreWHAifEbs0raGkwpb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -280,7 +280,7 @@
         "id": "vecVWoiQ9MTN"
       },
       "source": [
-        "#[Practical Deep Learning for Coders - fastai and Jeremy Howard (Cornell University)](https://www.youtube.com/watch?v=0oyCUWLL_fU&list=RDCMUC8butISFwT-Wl7EV0hUK0BQ&start_radio=1&t=55)\r\n",
+        "#[Practical Deep Learning for Coders - fastai and Jeremy Howard (University of San Francisco)](https://www.youtube.com/watch?v=0oyCUWLL_fU&list=RDCMUC8butISFwT-Wl7EV0hUK0BQ&start_radio=1&t=55)\r\n",
         "#[fastbook](https://github.com/fastai/fastbook)\r\n",
         "#[Forum](https://forums.fast.ai/)\r\n"
       ]
@@ -308,7 +308,7 @@
         "id": "dlwF7lypnIng"
       },
       "source": [
-        "##Lesson 1 - Your first modules [0:00:00]\r\n"
+        "##Lesson 1 - Your first module [0:00:00]\r\n"
       ]
     },
     {
@@ -327,12 +327,24 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "KNogJl4FDuzl"
+      },
+      "source": [
+        "# Python 3.6.8 for local jupyter notebook\r\n",
+        "# !pip install torch==1.7.0+cu110 torchvision==0.8.1+cu110 torchaudio===0.7.0 -f https://download.pytorch.org/whl/torch_stable.html"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "uqCu7nHC_OQB"
       },
       "source": [
-        "!pip install -Uqq fastbook"
+        "!pip install -U fastbook"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -354,28 +366,51 @@
       "source": [
         "import fastbook"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nnwEHUiMM9NX",
-        "outputId": "81edf85b-7fc8-4460-b012-5c3b378c2664",
+        "id": "MzpUJdgoi5dW",
+        "outputId": "0b3ea9a5-9e46-4bb4-d2d8-35cbd43210fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!python --version"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Python 3.6.9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "id": "nnwEHUiMM9NX",
+        "outputId": "b217453d-62b4-4404-b4c3-30240dfa3cfb"
       },
       "source": [
         "#id first_training\r\n",
         "#caption Results from the first training\r\n",
         "# CLICK ME\r\n",
-        "from fastai.vision.all import untar_data, ImageDataLoaders, cnn_learner\r\n",
+        "from fastai.vision.all import untar_data, ImageDataLoaders, cnn_learner,  URLs\r\n",
         "path = untar_data(URLs.PETS)/'images'\r\n",
         "print(path)"
       ],
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -541,12 +576,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZecHXR9pOBsJ",
-        "outputId": "e733c069-63a4-426d-dd1d-a524241cb59c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 161
-        }
+        },
+        "id": "ZecHXR9pOBsJ",
+        "outputId": "e733c069-63a4-426d-dd1d-a524241cb59c"
       },
       "source": [
         "doc(ImageDataLoaders.from_name_func)"
