--- a/praticalDL4Coders-JeremyHoward/praticalDL4Coders-JeremyHoward.ipynb
+++ b/praticalDL4Coders-JeremyHoward/praticalDL4Coders-JeremyHoward.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOdtwreWHAifEbs0raGkwpb",
+      "authorship_tag": "ABX9TyMSXy9WeDdFy7jTAk2p/VRu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -281,8 +281,11 @@
       },
       "source": [
         "#[Practical Deep Learning for Coders - fastai and Jeremy Howard (University of San Francisco)](https://www.youtube.com/watch?v=0oyCUWLL_fU&list=RDCMUC8butISFwT-Wl7EV0hUK0BQ&start_radio=1&t=55)\r\n",
+        "\r\n",
         "#[fastbook](https://github.com/fastai/fastbook)\r\n",
-        "#[Forum](https://forums.fast.ai/)\r\n"
+        "\r\n",
+        "#[Forum](https://forums.fast.ai/)\r\n",
+        "\r\n"
       ]
     },
     {
@@ -299,7 +302,7 @@
         "- ⌨️ (7:01:56) Lesson 5 - Data ethics\r\n",
         "- ⌨️ (9:09:46) Lesson 6 - Collaborative filtering\r\n",
         "- ⌨️ (https://youtu.be/HL7LOfyf6bc) Lesson 7 - Tabular data\r\n",
-        "- ⌨️ (https://youtu.be/HL7LOfyf6bc) Lesson 8 - Natural language processing"
+        "- ⌨️ (https://youtu.be/HL7LOfyf6bc) Lesson 8 - Natural language processing\r\n"
       ]
     },
     {
@@ -308,7 +311,8 @@
         "id": "dlwF7lypnIng"
       },
       "source": [
-        "##Lesson 1 - Your first module [0:00:00]\r\n"
+        "##Lesson 1 - Your first module [0:00:00]\r\n",
+        "\r\n"
       ]
     },
     {
@@ -372,11 +376,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MzpUJdgoi5dW",
-        "outputId": "0b3ea9a5-9e46-4bb4-d2d8-35cbd43210fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MzpUJdgoi5dW",
+        "outputId": "0b3ea9a5-9e46-4bb4-d2d8-35cbd43210fd"
       },
       "source": [
         "!python --version"
