--- a/praticalDL4Coders-JeremyHoward/praticalDL4Coders-JeremyHoward.ipynb
+++ b/praticalDL4Coders-JeremyHoward/praticalDL4Coders-JeremyHoward.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMSXy9WeDdFy7jTAk2p/VRu",
+      "authorship_tag": "ABX9TyPNW0Dv5wQEKJW8LtrPR+Cv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -346,7 +346,7 @@
         "id": "uqCu7nHC_OQB"
       },
       "source": [
-        "!pip install -U fastbook"
+        "!pip install -Upp fastbook"
       ],
       "execution_count": null,
       "outputs": []
