--- a/praticalDL4Coders-JeremyHoward/praticalDL4Coders-JeremyHoward.ipynb
+++ b/praticalDL4Coders-JeremyHoward/praticalDL4Coders-JeremyHoward.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5TgpXP9lU/epza1NRFWOC",
+      "authorship_tag": "ABX9TyPbquzSPvIl03Jk0IrT/jKX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -368,7 +368,7 @@
         "id": "GGmMztUyMZcF"
       },
       "source": [
-        "import fastbook"
+        "import fastbook # nvidia gpu is required"
       ],
       "execution_count": 3,
       "outputs": []
