--- a/praticalDL4Coders-JeremyHoward/praticalDL4Coders-JeremyHoward.ipynb
+++ b/praticalDL4Coders-JeremyHoward/praticalDL4Coders-JeremyHoward.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPKaj5vX+vsh2P8LAirXpan",
+      "authorship_tag": "ABX9TyOWehh62IAo+WtTCptLW3KU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -588,7 +588,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 161
+          "height": 144
         },
         "id": "ZecHXR9pOBsJ",
         "outputId": "e733c069-63a4-426d-dd1d-a524241cb59c"
@@ -707,26 +707,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Y1tbERkknrIZ",
-        "outputId": "c33184af-062c-4c32-c125-3b83e8422b43"
+        "id": "Y1tbERkknrIZ"
       },
       "source": [
-        "key = os.environ.get('AZURE_SEARCH_KEY','00e7238441bd4f67a74f48c13811a03d')\r\n",
+        "key = os.environ.get('AZURE_SEARCH_KEY','XXX')\r\n",
         "print(key)"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "00e7238441bd4f67a74f48c13811a03d\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -770,35 +758,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T_dRboxIOk8a",
-        "outputId": "ad0ce8ba-e340-4a47-af40-5bc3a6049046",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "print(ims)"
-      ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "28z64WBjHiZU",
-        "outputId": "fbee33db-af89-4716-c70b-e2cee4b8e4f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
-        }
+        },
+        "id": "28z64WBjHiZU",
+        "outputId": "fbee33db-af89-4716-c70b-e2cee4b8e4f5"
       },
       "source": [
         "# from download_url import download_url \r\n",
