--- a/praticalDL4Coders-JeremyHoward/praticalDL4Coders-JeremyHoward.ipynb
+++ b/praticalDL4Coders-JeremyHoward/praticalDL4Coders-JeremyHoward.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOWehh62IAo+WtTCptLW3KU",
+      "authorship_tag": "ABX9TyOqCzJT4NquCH8itgnVxJn1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -356,7 +356,7 @@
       "source": [
         "!pip install -Uqq fastbook"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,7 +391,7 @@
       "source": [
         "import fastbook "
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -406,7 +406,7 @@
       "source": [
         "!python --version"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,7 +434,7 @@
         "path = untar_data(URLs.PETS)/'images'\r\n",
         "print(path)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +483,7 @@
         "learn = cnn_learner(dls, resnet34, metrics=error_rate)\r\n",
         "learn.fine_tune(1)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,7 +596,7 @@
       "source": [
         "doc(ImageDataLoaders.from_name_func)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -666,7 +666,7 @@
         "\r\n",
         "import graphviz\r\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -692,7 +692,7 @@
         "     return L(search_results['value'])\r\n",
         "    "
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -701,7 +701,9 @@
         "id": "mgbVcUCJBUIW"
       },
       "source": [
-        "### [How to create/get a key in Azure](https://www.youtube.com/watch?v=8XxrPTWSFpc)"
+        "### [How to create/get a key in Azure](https://www.youtube.com/watch?v=8XxrPTWSFpc)\r\n",
+        "\r\n",
+        "- [Access denied due to invalid subscription key](https://stackoverflow.com/questions/42123633/access-denied-due-to-invalid-subscription-key-face-api/42127319#42127319)"
       ]
     },
     {
@@ -731,7 +733,7 @@
         "print(ims)\r\n",
         "len(ims)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -772,7 +774,7 @@
         "dest = 'images/grizzly.jpg'\r\n",
         "download_url(ims[0], dest)\r\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -787,26 +789,6 @@
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8p0PubtnNwK0"
-      },
-      "source": [
-        "import urllib."
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TgHdM3HWEVbP"
-      },
-      "source": [
-        ""
       ]
     }
   ]
